src/styles/style.css
/* ... */
.container {
    /* position: relative; */
}

.header {
    margin: 0;
    position: absolute;
    top: 250%;
    left: 20%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

#dateAnnouncement {
    text-align: center;
    background: #bcd2e1;
    font-weight: bold;
    font-size: 2em;
    width: 100%;
    margin-top: 0;
    margin-bottom: 1em;
    color: black;
    padding: 8px;
    border: 0;
}

#album-art img {
    width: 400px;
    height: 400px;
    border: 5px solid black;
    border-radius: 5px 0 0 5px;
}

@font-face {
    font-family: 'larissa';
    font-style: normal;
    font-weight: 400;
    src: local('Larissa'), local('larissa'), url(Larissa.ttf);
}

#album-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 1em;
    margin-bottom: 2em;
    flex-wrap: wrap;
}

#album-art #justins-name {
    position: absolute;
    margin-top: -291px;
    font-size: 19px;
    margin-left: 5px;
    font-family: larissa;
    font-weight: bold;
    color: rgb(0, 0, 0);
    text-align: center;
    letter-spacing: 4.5px;
    background-color: rgba(206, 206, 206, 0.54);
    padding-left: 4px;
    width: 390px;
}

#album-art #album-name {
    position: absolute;
    color: #323232;
    font-family: "Bungee Shade", monospace;
    font-weight: bold;
    font-size: 29px;
    margin-top: -333px;
    margin-left: 5px;
    letter-spacing: -1px;
    background-color: rgba(206, 206, 206, 0.86);
    width: 390px;
    text-align: center;
}

.booklet > p {
    background: #000000b2;
    height: 400px;
    width: 400px;
    text-align: left;
    color: #eaeff1;
    font-family: monospace;
    text-transform: full-size-kana;
    border-radius: 0 5px 5px 0;
    margin-left: 0;
    border-left: 1px dashed #94aab2;
    font-size: 12px;
    padding: 30px 30px 30px 25px;
}

#booklet-content a {
    color: rgb(166, 199, 213);
}

#threshold-network-link {
    color: blueviolet !important;
}

#help {
    font-size: 12px;
}

#help a {
    color: rgb(166, 199, 213);
}

#FAQ {
    background: black;
    color: white;
    padding: 2em;
    display: flex;
    justify-content: center;
}

#FAQ h3, #FAQ h4 {
    font-weight: bold;
    margin: 1em;
    font-family: monospace;
    letter-spacing: 1px;
    color: rgb(166, 199, 213);
}

#FAQ h3 {
    font-size: 2em;
}

#FAQ h4 {
    font-size: 1.5em;
}


#faq-questions {
    width: 85%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    align-items: center;
    max-width: 100em;
}


#faq-questions > p {
    margin: 1em;
}

#faq-questions p.end-of-answer {
    border-bottom: 1px solid #a6c7d5;
    padding-bottom: 3em;
}

#ack {
    background: #a6c7d5b8;
    color: black;
    padding: 2em;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    border-top: 1px solid blueviolet;
    border-bottom: 1px solid black;
}


#ack h2 {
    color: black;
    padding: 1em;
}


#ack-content {
    width: 75%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    align-items: center;
    max-width: 100em;
}

.acknowledgement-row {
    width: 100%;
    margin: 0 2em 2em 2em;
    border-bottom: 1px solid #0000003d;
    padding-bottom: 2em;
}

.acknowledgement-row:nth-child(odd) {
    flex-direction: row-reverse;

}

.acknowledgment-name {
    /* aling center vertically */
    display: flex;
    justify-content: center;
    align-items: center;
}


.acknowledgement-row h3 {
    font-weight: bold;
    font-family: monospace;
    font-size: 1em;
    letter-spacing: 2px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.acknowledgement-row p {
    font-size: 14px;
    text-align: left;
}

#countdown {
    color: rgb(5, 4, 4);
    font-family: "Bungee Shade", monospace;
    font-size: 2em;
    font-weight: bold;
    text-align: center;
    margin-bottom: 0;
}

#countdown-container {
    display: flex;
    align-items: center;
    flex-direction: column;
}

#ensemble {
    /*width: 50%;*/
}

#ensemble h1 {
    margin-bottom: 1em;
}

#ensemble h4.card-title {
    color: #d9d8d8;
    font-family: larissa;
}

#ensemble .card {
	border-top: 1px solid blueviolet;
	border-left: 1px solid blueviolet;
	min-width: 310px;
	width: fit-content;
    margin: auto;
}

#ensemble .card-text {
    font-size: .6em;
}

#intro-and-contributions {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 30%;
}

h1 {
    text-decoration: none;
    color: rgb(166, 199, 213);
    font-family: "Bungee Shade", monospace;
    font-size: min(10vw, 40px);
}

h2, h3, h4 {
    font-family: "Bungee Shade", monospace;
}

.logo-hyperlink {
    text-decoration: none;
    color: #d9d8d8;
    font-family: "Bungee Shade", monospace;
    font-size: 50px;
    letter-spacing: 5px;
}

.logo-hyperlink :hover {
    font-size: 60px;
    transition: 0.5s;
    color: rgb(231, 231, 231);
    text-shadow: 0 0 1px rgb(152, 40, 171), 0 0 20px rgb(49, 19, 50),
    0 0 40px rgb(75, 17, 77), 0 0 80px rgb(45, 16, 38),
    0 0 120px rgb(209, 66, 166);
}

.logo-hyperlink2 {
    text-decoration: none;
    color: #d9d8d8;
    font-family: "Bungee Shade", monospace;
    font-size: 25px;
    letter-spacing: 5px;
}


main {
    display: block;
    justify-content: space-around;
    align-items: center;
    padding-top: 1em;
    flex-direction: column-reverse;
}

.info {
    width: 95%;
    color: #e4e4e4;
    margin-top: 2em;
    font-family: monospace;
}

.album-overview {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 1em;
    margin-bottom: 1em;
    flex-wrap: nowrap;
}
/* ... */

